--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/version__obj",
-	"version": "5.0.6",
+	"version": "5.0.7",
 	"description": "ctx-core version__obj",
 	"keywords": [
 		"ctx-core",
@@ -30,6 +30,7 @@
 		"typescript": "^4.2.3"
 	},
 	"publishConfig": {
-		"access": "public"
+		"access": "public",
+		"cache": "~/.npm"
 	}
 }
