--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/version__obj",
-	"version": "6.0.3",
+	"version": "6.0.4",
 	"description": "ctx-core version__obj",
 	"keywords": [
 		"ctx-core",
@@ -24,7 +24,7 @@
 		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
 		"exec": "$@",
-		"prepublishOnly": "npm run compile"
+		"prepare": "npm run build"
 	},
 	"devDependencies": {
 		"typescript": "^4.3.4"
