--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/version__obj",
-	"version": "7.1.0",
+	"version": "7.1.1",
 	"description": "ctx-core version__obj",
 	"keywords": [
 		"ctx-core",
@@ -33,7 +33,7 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/object": "workspace:^24.1.4"
+		"@ctx-core/object": "24.1.5"
 	},
 	"devDependencies": {
 		"c8": "^7.13.0",
