--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/object": "27.4.4"
+		"@ctx-core/object": "^27.4.16"
 	},
 	"devDependencies": {
 		"c8": "^7.13.0",
