--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/version__obj",
-	"version": "7.2.1",
+	"version": "7.2.2",
 	"description": "ctx-core version__obj",
 	"keywords": [
 		"ctx-core",
@@ -19,6 +19,7 @@
 	"type": "module",
 	"files": [
 		"*.d.ts",
+		"*.json",
 		"./self_lazyload"
 	],
 	"types": "./index.d.ts",
@@ -36,7 +37,7 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/object": "^30.1.1"
+		"@ctx-core/object": "^30.1.2"
 	},
 	"devDependencies": {
 		"c8": "^8.0.1",
